# rust-jvm

./: .gitignore  Cargo.toml  README.md  driver.txt  exec.sh  fetch_runtime.sh  out.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust-build-test.yml
_deprecated/src/: main.rs
cli/: Cargo.toml
cli/src/: execute.rs  list_classes.rs  main.rs  runtime_options.rs
examples/: Hello.java  HelloWorld1.java  HelloWorld2.java
examples/fundamentals/: AbstractInvocation.java  Basic.java  Basic2.java  CharArray.java  CharsetProperties.java  CreateString.java  Dup2x1.java  Empty.java  Invocation.java  InvokeInterface.java  RefCmp.java  StringLastIndexOf.java  UnsafeWriteRead.java
examples/hello/: HelloWorld1.java  HelloWorld2.java
java_rt/: .gitignore  Cargo.toml  fetch_and_build.sh
java_rt/src/: lib.rs
loader/: Cargo.toml
loader/src/: classfile_loader.rs  composite_loader.rs  jarfile_loader.rs  lib.rs
model/: Cargo.toml
model/src/: api.rs  class.rs  class_constant_impl.rs  class_impl.rs  lib.rs  vm.rs  vm_frame_impl.rs  vm_instance_impl.rs
native_rt/: Cargo.toml
native_rt/src/: java_lang_string.rs  java_lang_system.rs  lib.rs
parser/: Cargo.toml
parser/src/: attributes.rs  class_info.rs  constants.rs  fields.rs  lib.rs  method_signature.rs  methods.rs  type_signature.rs  util.rs  version.rs
parser/tests/: class_with_fields_only.rs  classes.rs  interfaces.rs  java11_classes.rs  method_signature.rs  test_utils.rs  utils.rs
rt/: .gitignore  Cargo.toml  get_runtime.sh
rt/src/: defaults.rs  java_lang_object.rs  lib.rs
rt/src/native/: java_io_filedescriptor.rs  java_io_fileinputstream.rs  java_io_fileoutputstream.rs  java_io_unixfilesystem.rs  java_lang_accesscontroller.rs  java_lang_class.rs  java_lang_classloader.rs  java_lang_double.rs  java_lang_float.rs  java_lang_object.rs  java_lang_reflect_array.rs  java_lang_runtime.rs  java_lang_string_utf16.rs  java_lang_system.rs  java_lang_thread.rs  jdk_internal_misc_signal.rs  jdk_internal_misc_unsafe.rs  jdk_internal_misc_vm.rs  mod.rs
rt/tests/: java_lang_math.rs  java_lang_string.rs  java_lang_thread.rs  java_nio_charset_charset.rs  java_util_concurrent_atomic_atomicinteger.rs  java_util_concurrent_concurrenthashmap.rs  java_util_properties.rs
src/: classloader.rs  fields.rs  main.rs
src/classfile/: attributes.rs  class_info.rs  constant_pool.rs  constants.rs  fields.rs  (+3 more)
vm/: Cargo.toml
(+330 files in other folders)
