[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
parser = { path = "../parser" }
loader = { path = "../loader" }
vm = { path = "../vm" }
rt = { path = "../rt" }

clap = { version = "3.1.2", features = ["derive"] }
prettytable-rs = "0.10"
env_logger = "0.11"
anyhow = { version = "1.0", features = ["backtrace"] }
better-panic = "0.3.0"
