[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
parser = { path = "../parser" }
loader = { path = "../loader" }
vm = { path = "../vm" }
rt = { path = "../rt" }

clap = { version = "4.5.45", features = ["derive"] }
prettytable-rs = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
better-panic = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
