[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
parser = { path = "../parser" }

glob = "0.3.1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
anyhow = "1.0"
log = "0.4.17"
tracing = "0.1.41"

[dev-dependencies]
