[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
loader = { path = "../loader" }
vm = { path = "../vm" }

log = "0.4.17"
dirs = "6.0"

[dev-dependencies]
parser = { path = "../parser" }

rstest = "0.26"
pretty_assertions = "1.4"
env_logger = "0.11"
ctor = "0.5.0"
